--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,13 @@
-gene: mcrA
-full_name: "methyl coenzyme M reductase"
+gene: mmoX
+full_name: "methane monooxygenase"
 minlength: 350
 cutoff_otu: 0.01
 cutoff_dm: 0.25
-framebot_db: true   
+framebot_db: true
+update: no
+mindate: 2020/02/06
+maxdate: 2020/09/03
+path_to_tree: "/mnt/nfs/bioinfdata/home/NIOO/ohanac/database/EPA/otu688_ref_newick.txt"
+path_to_seqs: "/mnt/nfs/bioinfdata/home/NIOO/ohanac/database/EPA/otu.rep.012_named_to_align.fasta"
+path_to_db: "/mnt/nfs/bioinfdata/home/NIOO/ohanac/database/tax/tax_final/expanded_pmoa_db.fasta"
+path_to_tax: "/mnt/nfs/bioinfdata/home/NIOO/ohanac/database/tax/tax_final/expanded_pmoa_taxonomy.tax"
